--- a/2048/highscoredialog.ui
+++ b/2048/highscoredialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>329</width>
-    <height>178</height>
+    <height>189</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -89,12 +89,12 @@
         </font>
        </property>
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Most Moves:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Best win (2048):&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLabel" name="mostMovesLabel">
+      <widget class="QLabel" name="leastMovesLabel">
        <property name="palette">
         <palette>
          <active>
